# anki-sentence-miner

./: .gitignore  Makefile  README.md  __init__.py  manifest.json  pyproject.toml
docs/: CODE_OF_CONDUCT.md
sentminer/: __init__.py  paths.py  schema.json
