[tool.poetry]
name = "sentminer"
version = "0.1.0"
description = "Anki add-on for mining sentences in several languages. Just enter the doubtful word and receive the phonetic transcription, some sentences and images to choose from."
authors = ["Jonathan Silva <jonathan.silva@smar.com.br>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sentminer"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
