[tool.poetry]
name = "sentminer"
version = "0.1.0"
description = "Anki add-on for mining sentences in english. Just enter the doubtful word and receive the phonetic transcription, some sentences and images to choose from."
authors = ["Jonathan Silva <jonathan.silva@smar.com.br>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sentminer"}]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.991"
aqt = "^2.1.55"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.11.4"
prospector = "^1.7.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
